--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="name">
-        <h1>Weather App</h1>
+        <h1>Weather Hub</h1>
     </div>
 
     <div class="container">
